--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
-    "react-transition-group": "1.x",
+    "react-transition-group": "^2.3.0",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1"
   },
