--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,14 @@
 {
   "short_name": "Problems",
   "name": "Problems - The To-Do list for problem solvers",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
+  "icons": [{
+    "src": "check-mark-192.jpg",
+    "type": "image/jpg",
+    "sizes": "192x192"
+  }],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "theme_color": "#ca3737",
+  "background_color": "#ca3737"
 }
