--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "1.1.1",
     "react-transition-group": "^2.3.0",
     "redux": "^3.7.2",
-    "redux-devtools": "^3.4.1"
+    "redux-devtools": "^3.4.1",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
