--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-transition-group": "^2.3.0",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
+    "redux-form": "^7.4.2",
     "styled-components": "^3.2.6"
   },
   "scripts": {
